fix: blog project uri -> project url change